apps/it-tools/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/name: it-tools
