apps/it-tools/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: it-tools
